install apt get packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,19 @@ matrix:
         - DIST=osx
         - RUN_LINTR=false
 
+addons:
+  apt:
+    packages:
+      - libcurl4-gnutls-dev
+      - libgit2-dev
+      - libssl-dev
+      - libudunits2-dev
+      - libprotobuf-dev
+      - libv8-dev
+      - libjq-dev
+      - protobuf-compiler
+      - libgdal-dev
+
 env:
   global:
     - _R_CHECK_TESTS_NLINES_=0
